setting home page images - fixing bug on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,10 @@
  */
 
 
+* {
+	border: 1px solid gray !important;
+}
+
 body {
 	background-color: #FAFAFA;
 }
