--- a/app/assets/stylesheets/hero.css
+++ b/app/assets/stylesheets/hero.css
@@ -1,8 +1,10 @@
 
-#hero-container {
+.for-border-on-page {
 	border-bottom: 8px solid black;
-	border-top: 8px solid black;
-	padding-top: 20px;
+}
+
+#hero-container {
+	padding-top: 30px;
 	padding-bottom: 30px;
 }
 
